<resources>
    <string name="create">Create \n \n Workout</string>
    <string name="todays">Todays \n \n Workout</string>
    <string name="weight">Workout \n \n Calendar</string>
    <string name="workout">User \n \n Profile</string>
    <string name="choose_regiment">Choose your /n lifting regiment</string>
    <string name="runing">Running \n \n Map</string>
    <string name="music">Music \n\n Playlists</string>
    <string name="progress">My Progress</string>
    <string name="app_name">ProjectSpotR</string>
    <string name="auth_failed">Authentication Failure.</string>
    <string name="signed_out">You\'ve Been Signed Out.</string>
    <string name="suggestedworkout">Suggested Workout</string>
</resources>
